--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@trpc/client": "11.0.0-rc.730",
     "@trpc/react-query": "11.0.0-rc.730",
     "@trpc/server": "11.0.0-rc.730",
+    "@upstash/ratelimit": "2.0.5",
+    "@upstash/redis": "1.34.3",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -52,20 +54,24 @@
     "concurrently": "9.1.2",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "0.39.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.0",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "5.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.0",
+    "superjson": "^2.2.2",
     "svix": "1.45.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -77,7 +83,6 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "0.30.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
